--- a/templates/FAQ1.html
+++ b/templates/FAQ1.html
@@ -5,10 +5,9 @@
 
 <body>
     <div class="container">
-        <h2>Result</h2>
-        <h4>Congratulation!! You have passed your ethical test!</h4>
         <form action="/main" method="POST">
             <input type="submit" value="Main">
         </form>
+        <h6>reply: {{r}}</h6>
     </div>
 </body>
