--- a/templates/userLog.html
+++ b/templates/userLog.html
@@ -5,8 +5,7 @@
 
 <body>
     <div class="container">
-        <h2>Result</h2>
-        <h4>Congratulation!! You have passed your ethical test!</h4>
+        <h2>User Log {{r}}</h2>
         <form action="/main" method="POST">
             <input type="submit" value="Main">
         </form>
